--- a/front-end/src/styles/ques.css
+++ b/front-end/src/styles/ques.css
@@ -1,108 +1,108 @@
 .ques {
-    width: 80vw;
-    border-left: 7px solid #e3dfd5;
-    border-radius: 4px;
-    margin-left: 5vw;
+  width: 80vw;
+  border-left: 7px solid #e3dfd5;
+  border-radius: 4px;
+  margin-left: 5vw;
 }
 
 .navigation {
-    background-color: #16a34a;
+  background-color: #16a34a8e;
 }
 
 .head {
-    height: 120px;
+  height: 120px;
 }
 
 /* Apply custom styles to the radio button */
 input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    border: 2px solid #ccc;
-    outline: none;
-    position: relative;
-    cursor: pointer;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  outline: none;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 input[type="radio"]:checked {
-    background-color: orange;
-    /* Set the background color to orange */
-    border-color: orange;
-    /* Change the border color to orange */
+  background-color: orange;
+  /* Set the background color to orange */
+  border-color: orange;
+  /* Change the border color to orange */
 }
 
 input[type="radio"]:checked::before {
-    content: "";
-    position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: white;
-    /* Inner circle color */
-    transition: background-color 0.3s ease;
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: white;
+  /* Inner circle color */
+  transition: background-color 0.3s ease;
 }
 
 .btnsub {
-    width: 90vw;
-    height: 8vh;
-    margin-top: 45px;
+  width: 90vw;
+  height: 8vh;
+  margin-top: 45px;
 }
 
 /* Container for the progress bar */
 .progress-container {
-    margin-left: 21.6px;
-    width: 90vw;
-    height: 7px;
-    background-color: #e0e0e0;
-    border-radius: 5px;
-    overflow: hidden;
-    margin-bottom: 10px;
-    position: relative;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+  margin-left: 21.6px;
+  width: 90vw;
+  height: 7px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  position: relative;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 /* The progress bar itself */
 .progress-bar {
-    height: 100%;
-    transition: background 0.3s ease;
+  height: 100%;
+  transition: background 0.3s ease;
 }
 
 /* Text showing current question info */
 .progress-info {
-    margin-top: 5px;
-    text-align: right;
-    font-size: 14px;
-    margin-right: 6vw;
-    color: #333;
+  margin-top: 5px;
+  text-align: right;
+  font-size: 14px;
+  margin-right: 6vw;
+  color: #333;
 }
 
 .prevt {
-    width: 80vw;
-    height: 7vh;
-    margin-left: 5vw;
-    align-items: center;
-    display: flex;
+  width: 80vw;
+  height: 7vh;
+  margin-left: 5vw;
+  align-items: center;
+  display: flex;
 }
 
 .ri-arrow-left-circle-line {
-    margin-right: 55.4vw;
+  margin-right: 55.4vw;
 }
 
 .hc {
-    background-color: rgb(240, 194, 172);
-    height: 5.5vh;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    white-space: nowrap;
+  background-color: rgb(240, 194, 172);
+  height: 5.5vh;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  white-space: nowrap;
 }
 
 .healthcheck {
-    width: 100vw;
+  width: 100vw;
 }
